--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,70 @@ body {
   opacity: 50%;
 }
 
+.aboutpic {
+  width: 100%;
+  opacity: 15%;
+}
+
+#ryetext {
+  font-family: "Rye", sans-serif;
+  font-size: 96px;
+  color: white;
+}
+
+.about-text {
+  position: relative;
+  display: inline-block; /* keeps image + text together */
+}
+
+.aboutpic {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 12px; /* optional styling */
+}
+
+.overlay {
+  margin-top: 3rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* text-align: center; */
+  color: white; /* overlay text color */
+  padding: 20px;
+}
+
+#ryetext {
+  font-size: 5rem;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.button-join {
+  border-radius: 20px; /* Rounded corners */
+  border: none;
+  padding: 10px 24px; /* More breathing space */
+  background-color: #d9d9d9; /* Same grey background */
+  font-size: 20px;
+  font-family: "Crimson Text", serif;
+  cursor: pointer;
+  /* color: white; */
+}
+
+.navhead {
+  cursor: pointer;
+}
+
+.navbar-overlay {
+  opacity: 50%;
+}
+
 .hamburger span {
   height: 3px;
   width: 25px;
