--- a/style.css
+++ b/style.css
@@ -293,7 +293,9 @@ header {
   /* font-family: "Crimson Text", serif; */
   /* z-index: 1000;
 }  */ */
-
+#about{
+  padding-bottom: 72px;
+}
 .about-text {
   position: relative;
   font-family: "Crimson Text", serif;
@@ -406,7 +408,7 @@ video {
 section {
   width: 100%;
   margin: 0;
-  padding: 72px 18px
+  padding: 72px 18px 0;
 }
 
 .section-title {
@@ -444,6 +446,7 @@ section {
   border: 1px solid rgba(255, 255, 255, .1);
   border-radius: 10px;
   padding: 20px;
+  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   gap: 10px;
