--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
   position: absolute;
   top: 100%;
   height: 1000vh;
-  background: linear-gradient(to bottom, #000, rgb(205, 83, 132), rgb(130, 42, 144));
+  background: linear-gradient(to bottom, #000, rgb(130, 42, 144));
   ;
 }
 header {
